# JustQueueIt

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE_HEADER  README.md  conanfile.py  sonar-project.properties
.github/workflows/: analyzers.yml
cmake/: variables.cmake
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/backend/: CMakeLists.txt  backend_app.cpp
src/libraries/: CMakeLists.txt
src/libraries/backend/: CMakeLists.txt
src/libraries/backend/data_storage/: CMakeLists.txt
src/libraries/backend/data_storage/in_memory_storage/: CMakeLists.txt  in_memory_storage.cpp  in_memory_storage.hpp
src/libraries/backend/data_storage/interface/: CMakeLists.txt  data_storage.hpp  data_storage_mock.hpp
src/libraries/backend/data_storage/ut/: storages_ut.cpp
src/libraries/backend/interface/: CMakeLists.txt
src/libraries/backend/interface/task/: CMakeLists.txt  task.hpp
src/libraries/backend/server/: CMakeLists.txt  server.cpp  server.hpp
src/libraries/backend/tasks_manager/: CMakeLists.txt  tasks_manager.cpp  tasks_manager.hpp
src/libraries/backend/tasks_manager/ut/: tasks_manager_ut.cpp
src/libraries/rest/: CMakeLists.txt
src/libraries/rest/core/: CMakeLists.txt  rest_core.cpp  rest_core.hpp
src/libraries/rest/router/: CMakeLists.txt  rest_router.cpp  rest_router.hpp
src/libraries/rest/router/ut/: rest_router_ut.cpp
src/libraries/rest/server/: CMakeLists.txt  rest_server.cpp  rest_server.hpp
src/libraries/rest/server/ut/: rest_server_ut.cpp
src/libraries/utils/: CMakeLists.txt  function_traits.hpp  utils.hpp
